spec/unit/compile_errors/fixtures/01_tag_reuse_after_reserved.cr
# expect: was reserved
require "../../../../src/prostore"

class M < Prostore::Model
  reserved 1
  field 1, :name, String
end
